--- a/index.html
+++ b/index.html
@@ -7,18 +7,102 @@
     <title>Community Science Museum|Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      src="https://kit.fontawesome.com/91f98c5a03.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
     <link href="styles.css" rel="stylesheet" />
   </head>
-
   <body>
+    <header class="header-container">
+      <div class="logo-position">
+        <a href="index.html">
+          <img
+            src="images/logo.png"
+            class="logo"
+            alt="Community Science Center"
+          />
+        </a>
+      </div>
+      <div class="menu">
+        <p>MENU</p>
+        <label for="sub-menu"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="sub-menu" />
+        <nav>
+          <div class="dropdown">
+            <ul>
+              <li><a href="exhibitions.html">Exhibitions</a></li>
+              <li><a href="visit.html">Visit us</a></li>
+              <li><a href="getinvolved.html">Get involved</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <div class="spacer"></div>
     <main>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, ipsa?
-      Aliquam quod porro blanditiis veniam velit nobis illo hic a ullam! Nisi
-      neque velit sint! Autem possimus nisi dicta asperiores.
+      <section class="section-one">
+        <div class="slider-container">
+          <div class="image1">
+            <img src="../images/exhibition-1863344_1920.jpg" alt="" />
+            <div class="box">
+              <p>Welcome to the Community Science Center</p>
+            </div>
+          </div>
+
+          <div class="image2">
+            <img src="../images/library-1132573_1920.jpg" alt="" />
+            <div class="box">
+              <p>Visit our Library</p>
+            </div>
+          </div>
+          <div class="image3">
+            <img src="../images/mammoth-1257288_1920.jpg" alt="" />
+            <div class="box">
+              <p>Discover the origins of life</p>
+            </div>
+          </div>
+          <div class="image4">
+            <img src="../images/celso-405219.jpg" alt="" />
+            <div class="box">
+              <p>Learn about the solar system</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="about-section">
+        <h1>About us</h1>
+        <div class="blue-background">
+          <div class="about-text">
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits-they only come to life at night when everyone`s
+              gone home).
+            </p>
+            <p>
+              Come join us at the Community Science Museum where we`re committed
+              to making science accessible to all.
+            </p>
+          </div>
+          <div class="vr-boy">
+            <img src="../Semester-Project-1/images/samuel-zeller-158996.jpg" alt="">
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
