added more things to homepage

--- a/index.html
+++ b/index.html
@@ -1,108 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community Science Museum|Home</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script
-      src="https://kit.fontawesome.com/91f98c5a03.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
-      rel="stylesheet"
-    />
-    <link href="styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <header class="header-container">
-      <div class="logo-position">
-        <a href="index.html">
-          <img
-            src="images/logo.png"
-            class="logo"
-            alt="Community Science Center"
-          />
-        </a>
-      </div>
-      <div class="menu">
-        <p>MENU</p>
-        <label for="sub-menu"><i class="fas fa-bars"></i></label>
-        <input type="checkbox" id="sub-menu" />
-        <nav>
-          <div class="dropdown">
-            <ul>
-              <li><a href="exhibitions.html">Exhibitions</a></li>
-              <li><a href="visit.html">Visit us</a></li>
-              <li><a href="getinvolved.html">Get involved</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <div class="spacer"></div>
-    <main>
-      <section class="section-one">
-        <div class="slider-container">
-          <div class="image1">
-            <img src="../images/exhibition-1863344_1920.jpg" alt="" />
-            <div class="box">
-              <p>Welcome to the Community Science Center</p>
-            </div>
-          </div>
 
-          <div class="image2">
-            <img src="../images/library-1132573_1920.jpg" alt="" />
-            <div class="box">
-              <p>Visit our Library</p>
-            </div>
-          </div>
-          <div class="image3">
-            <img src="../images/mammoth-1257288_1920.jpg" alt="" />
-            <div class="box">
-              <p>Discover the origins of life</p>
-            </div>
-          </div>
-          <div class="image4">
-            <img src="../images/celso-405219.jpg" alt="" />
-            <div class="box">
-              <p>Learn about the solar system</p>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Community Science Museum|Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header-container">
+    <div class="logo-position">
+      <a href="index.html">
+        <img src="images/logo.png" class="logo" alt="Community Science Center" />
+      </a>
+    </div>
+    <div class="menu">
+      <p>MENU</p>
+      <label for="sub-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="sub-menu" />
+      <nav>
+        <div class="dropdown">
+          <ul>
+            <li><a href="exhibitions.html">Exhibitions</a></li>
+            <li><a href="visit.html">Visit us</a></li>
+            <li><a href="getinvolved.html">Get involved</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <div class="spacer"></div>
+  <main>
+    <section class="section-one">
+      <div class="slider-container">
+        <div class="image1">
+          <img src="../images/exhibition-1863344_1920.jpg" alt="modern art exhibition, museum exhibition" />
+          <div class="box">
+            <p>Welcome to the Community Science Center</p>
           </div>
         </div>
-      </section>
-      <section class="about-section">
-        <h1>About us</h1>
-        <div class="blue-background">
-          <div class="about-text">
-            <p>
-              We believe science should not be confined to the textbook, but
-              brought to live through exhibits. This is why we have over 1000
-              different exhibits on the many varied subjects of science to
-              explore. Many of these exhibits are designed for you to interact
-              with and play around to see science come to life (apart from the
-              dinosaur exhibits-they only come to life at night when everyone`s
-              gone home).
-            </p>
-            <p>
-              Come join us at the Community Science Museum where we`re committed
-              to making science accessible to all.
-            </p>
-          </div>
-          <div class="vr-boy">
-            <img src="../Semester-Project-1/images/samuel-zeller-158996.jpg" alt="">
+
+        <div class="image2">
+          <img src="../images/library-1132573_1920.jpg" alt="interior of a library" />
+          <div class="box">
+            <p>Visit our Library</p>
           </div>
         </div>
-      </section>
-    </main>
-  </body>
+        <div class="image3">
+          <img src="../images/mammoth-1257288_1920.jpg" alt="mammoth skeleton on a exhibition" />
+          <div class="box">
+            <p>Discover the origins of life</p>
+          </div>
+        </div>
+        <div class="image4">
+          <img src="../images/celso-405219.jpg" alt="image of a solar system" />
+          <div class="box">
+            <p>Learn about the solar system</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-section">
+      <h1>About us</h1>
+      <div class="blue-background">
+        <div class="about-text">
+          <p>
+            We believe science should not be confined to the textbook, but
+            brought to live through exhibits. This is why we have over 1000
+            different exhibits on the many varied subjects of science to
+            explore. Many of these exhibits are designed for you to interact
+            with and play around to see science come to life (apart from the
+            dinosaur exhibits-they only come to life at night when everyone`s
+            gone home).
+          </p>
+          <p>
+            Come join us at the Community Science Museum where we`re committed
+            to making science accessible to all.
+          </p>
+        </div>
+        <div class="vr-boy">
+          <img src="../images/samuel-zeller-158996.jpg" alt="Boy wearing VR googles" />
+        </div>
+      </div>
+    </section>
+
+    <section class="event-section">
+        <h1>Special Events & Exhibitions</h1>
+      <div class="event-container">
+        <div class="event">
+          <div class="event-img">
+            <img src="../images/sigmund-jzz_3jWMzHA-unsplash.jpg"
+              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+          </div>
+          <div class="event-txt">
+            <h2>Visiting Professor of Aeronautics</h2>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering 3
+              lectures on the development of aeronautics and where the future
+              lies in this exciting `space`.
+            </p>
+          </div>
+        </div>
+        <div class="event">
+          <div class="event-img">
+            <img src="../images/natasha-jenny-tWuyjS_mc0Y-unsplash.jpg"
+              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+          </div>
+          <div class="event-txt">
+            <h2>Night in the Museum</h2>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays. Bring your
+              own sleeping bag and get ready to rough it as we go exploring
+              the wonders of science.
+            </p>
+          </div>
+        </div>
+        <div class="event">
+          <div class="event-img">
+            <img src="../images/andy-kelly-0E_vhMVqL9g-unsplash.jpg"
+              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+          </div>
+          <div class="event-txt">
+            <h2>Energetica Exhibition on Loan</h2>
+            <p>
+              On loan from the NEMO Science Museum in Amsterdam, the
+              Energetica exhibition is coming to the Community Science Museum.
+              It`s a series of installations that allow visitors to experience
+              the power of the elements as we harness them. From solar energy
+              powering lighting, to `Wind Island` that shows how turbines are
+              able to use and control wind to create power.
+            </p>
+          </div>
+        </div>
+        <div class="event">
+          <div class="event-img">
+            <img src="../images/billetto-editorial-334686.jpg"
+              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+          </div>
+          <div class="event-txt">
+            <h2>Experience Virtual Reality</h2>
+            <p>
+              Experience Virtual Reality Try VR goggles and take a journey to
+              the depths of the ocean, space or even inside the human body!
+              Allow yourself to be completely immersed in an interactive
+              adventure.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
