--- a/index.html
+++ b/index.html
@@ -73,32 +73,35 @@
     <section class="about-section">
       <h1>About us</h1>
       <div class="blue-background">
-        <div class="about-text">
-          <p>
-            We believe science should not be confined to the textbook, but
-            brought to live through exhibits. This is why we have over 1000
-            different exhibits on the many varied subjects of science to
-            explore. Many of these exhibits are designed for you to interact
-            with and play around to see science come to life (apart from the
-            dinosaur exhibits-they only come to life at night when everyone`s
-            gone home).
-          </p>
-          <p>
-            Come join us at the Community Science Museum where we`re committed
-            to making science accessible to all.
-          </p>
-        </div>
-        <div class="vr-boy">
-          <img src="../images/samuel-zeller-158996.jpg" alt="Boy wearing VR googles" />
+        <div class="about-wrapper">
+          <div class="about-text">
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits-they only come to life at night when
+              everyone`s gone home).
+            </p>
+            <p>
+              Come join us at the Community Science Museum where we`re
+              committed to making science accessible to all.
+            </p>
+          </div>
+          <div class="vr-boy">
+            <img src="../images/samuel-zeller-158996.jpg" alt="Boy wearing VR googles" />
+          </div>
         </div>
       </div>
     </section>
 
     <section class="event-section">
-        <h1>Special Events & Exhibitions</h1>
+      <h1>Special Events & Exhibitions</h1>
       <div class="event-container">
         <div class="event">
           <div class="event-img">
+            <p>March 10th at 14:00 o`clock</p>
             <img src="../images/sigmund-jzz_3jWMzHA-unsplash.jpg"
               alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
           </div>
@@ -114,6 +117,7 @@
         </div>
         <div class="event">
           <div class="event-img">
+            <p>March 11th at 20:00 o`clock</p>
             <img src="../images/natasha-jenny-tWuyjS_mc0Y-unsplash.jpg"
               alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
           </div>
@@ -129,6 +133,7 @@
         </div>
         <div class="event">
           <div class="event-img">
+            <p>March 13th at 11:00 o`clock</p>
             <img src="../images/andy-kelly-0E_vhMVqL9g-unsplash.jpg"
               alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
           </div>
@@ -146,20 +151,77 @@
         </div>
         <div class="event">
           <div class="event-img">
+            <p>March 14th at 10:00 o`clock</p>
             <img src="../images/billetto-editorial-334686.jpg"
               alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
           </div>
           <div class="event-txt">
             <h2>Experience Virtual Reality</h2>
             <p>
-              Experience Virtual Reality Try VR goggles and take a journey to
-              the depths of the ocean, space or even inside the human body!
-              Allow yourself to be completely immersed in an interactive
-              adventure.
+              Try VR goggles and take a journey to the depths of the ocean,
+              space or even inside the human body! Allow yourself to be
+              completely immersed in an interactive adventure.
             </p>
           </div>
         </div>
       </div>
+    </section>
+    <section class="explore-section">
+      <h1>Explore</h1>
+      <div class="blue-background">
+        <div class="explore-container">
+          <div class="explore-text">
+            <h2>For kids</h2>
+            <p>
+              Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to
+              see
+              and do.
+            </p>
+            <p>
+              You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our
+              resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you
+              come ready to learn and explore.
+            </p>
+          </div>
+          <div class="explore-image">
+            <img src="../images/happy-little-scientist-making-experiment.jpg" alt="">
+          </div>
+        </div>
+        <div class="explore-container">
+          <div class="explore-text">
+            <h2>For teachers</h2>
+            <p>
+              As a community-driven museum, we want to work with schools to create places of learning and exploring. Our
+              team are on hand to give your students guided tours of the museum, teach them in our learning laboratory,
+              and provide great video presentations that will excite and inspire them.
+            </p>
+            <p>
+              Please get in touch with us here to find out more about our facilities and to arrange a time to bring your
+              students through for a visit.
+            </p>
+          </div>
+          <div class="explore-image">
+            <img src="../images/teacher.jpg" alt="">
+          </div>
+        </div>
+        <div class="explore-container">
+          <div class="explore-text">
+            <h2>For researchers</h2>
+            <p>
+              Are you looking to get involved with our team of researchers and academics? Our museum offers various ways
+              for you to use our resources and contribute towards them.
+            </p>
+            <p>
+              We have online records, laboratory space, and a working relationship with a number of universities around
+              the country.
+            </p>
+          </div>
+          <div class="explore-image">
+            <img src="../images/scientific.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 </body>
