added newsletter section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,19 @@
         </div>
       </div>
     </section>
+
+    <section class="newsletter-section">
+      <h1>Sign up to our newsletter</h1>
+      <form method="get" action="index.html">
+        <div class="form-wrapper">
+          <label for="name"> Name:</label>
+          <input name="name" id="name" type="name" placeholder="Name">
+          <label for="email"> E-mail:</label>
+          <input name="email" id="email" type="email" placeholder="E-mail">
+        </div>
+      </form>
+
+    </section>
   </main>
 </body>
 
