created newsletter section & footer

--- a/index.html
+++ b/index.html
@@ -227,20 +227,50 @@
         </div>
       </div>
     </section>
-
     <section class="newsletter-section">
-      <h1>Sign up to our newsletter</h1>
+      <h1>Subscribe to our newsletter</h1>
       <form method="get" action="index.html">
         <div class="form-wrapper">
-          <label for="name"> Name:</label>
-          <input name="name" id="name" type="name" placeholder="Name">
-          <label for="email"> E-mail:</label>
-          <input name="email" id="email" type="email" placeholder="E-mail">
+          <input name="name" id="name" type="name" placeholder="Name" />
+          <input name="email" id="email" type="email" placeholder="E-mail" />
+          <div class="signin-button">
+            <input type="submit" value="Subscribe" class="cta-button signin-button" />
+          </div>
         </div>
       </form>
-
     </section>
   </main>
+  <footer>
+    <div class="footer-wrapper">
+      <div class="contact">
+        <h2>Contact</h2>
+        <address>
+          <p>Community Science Center</p>
+          <p>Landleven 20</p>
+          <p>9743 DA Groningen</p>
+          <p>Netherlands</p>
+        </address>
+        <p>Tlf: 98 76 90 123</p>
+        <p>Email: post@communityscience.nl</p>
+      </div>
+      <div class="opening-hours">
+        <h2>Opening hours</h2>
+        <li>Monday: Closed</li>
+        <li>Tuesday: 10:00-16:00</li>
+        <li>Wednesday: 10:00-16:00</li>
+        <li>Thursday: 10:00-16:00</li>
+        <li>Friday: 10:00-19:00</li>
+        <li>Saturday: 9:00-16:00</li>
+        <li>Sunday: 9:00-13:00</li>
+      </div>
+      <div class="social-media">
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+    <p class="copyright-txt"> &copy; 2022  Community Science Center</p>
+  </footer>
 </body>
 
 </html>
