footer, search bar + responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
 <body>
   <header class="header-container">
-    <div class="logo-position">
+    <div class="search">
+      <input type="text" class="search-text" placeholder="Search...">
+      <button class="search-button"><i class="fas fa-search"></i></button>
+    </div>
+    <div class="logo-position logo-mobile">
       <a href="index.html">
         <img src="images/logo.png" class="logo" alt="Community Science Center" />
       </a>
@@ -40,6 +44,10 @@
     </div>
   </header>
   <div class="spacer"></div>
+  <div class="search2">
+    <input type="text" class="search-text" placeholder="Search...">
+    <button class="search-button"><i class="fas fa-search"></i></button>
+  </div>
   <main>
     <section class="section-one">
       <div class="slider-container">
@@ -263,13 +271,25 @@
         <li>Saturday: 9:00-16:00</li>
         <li>Sunday: 9:00-13:00</li>
       </div>
+      <div class="footer-list">
+        <a href="visit.html">
+          <p>Contact</p>
+        </a>
+        <a href="exhibitions.html">
+          <p>Exhibitions</p>
+        </a>
+        <a href="getinvolved.html">
+          <p>Get involved</p>
+        </a>
+      </div>
+
       <div class="social-media">
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
         <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
         <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
-    <p class="copyright-txt"> &copy; 2022  Community Science Center</p>
+    <p class="copyright-txt">&copy; 2022 Community Science Center</p>
   </footer>
 </body>
 
