created exhibitions page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="event-img">
             <p>March 11th</p>
             <img src="../images/natasha-jenny-tWuyjS_mc0Y-unsplash.jpg"
-              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+              alt="picture showing children sliding down and playing" />
           </div>
           <div class="event-txt">
             <h2>Night in the Museum</h2>
@@ -143,7 +143,7 @@
           <div class="event-img">
             <p>March 13th</p>
             <img src="../images/andy-kelly-0E_vhMVqL9g-unsplash.jpg"
-              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+              alt="picture of a little girl holding hand with a robot" />
           </div>
           <div class="event-txt">
             <h2>Energetica Exhibition on Loan</h2>
@@ -161,7 +161,7 @@
           <div class="event-img">
             <p>March 14th</p>
             <img src="../images/billetto-editorial-334686.jpg"
-              alt="picture of Prof Sheila Widnall-professor of Aeronautics" />
+              alt="teenager wearing VR googles and painting" />
           </div>
           <div class="event-txt">
             <h2>Experience Virtual Reality</h2>
@@ -180,7 +180,7 @@
         <div class="explore-container">
           <div class="explore-image">
             <h2>For kids</h2>
-            <img src="../images/happy-little-scientist-making-experiment.jpg" alt="" />
+            <img src="../images/happy-little-scientist-making-experiment.jpg" alt="smiling girl making experiments" />
           </div>
           <div class="explore-text">
             <p>
@@ -199,7 +199,7 @@
         <div class="explore-container">
           <div class="explore-image">
             <h2>For teachers</h2>
-            <img src="../images/teacher.jpg" alt="" />
+            <img src="../images/teacher.jpg" alt="female teacher smiling to pupils in the classrom" />
           </div>
           <div class="explore-text">
             <p>
@@ -219,7 +219,7 @@
         <div class="explore-container">
           <div class="explore-image">
             <h2>For researchers</h2>
-            <img src="../images/scientific.jpg" alt="" />
+            <img src="../images/scientific.jpg" alt="female scientist holding a controller and standing in front of a machine " />
           </div>
           <div class="explore-text">
             <p>
