added elements to visit us

--- a/visit.html
+++ b/visit.html
@@ -48,11 +48,13 @@
         <input type="text" class="search-text" placeholder="Search..." />
         <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
-    <main>
-        <h1>Visit us</h1>
+    <main class="background-visit">
+        <div class="museum">
+            <h1>Visit us</h1>
+            <img src="../images/scott-webb-102825.jpg" alt="" />
+        </div>
         <section class="visit-section">
             <div class="visit-part">
-                <img src="../images/scott-webb-102825.jpg" alt="" />
                 <div class="visit-subpart">
                     <h2>Opening hours</h2>
                     <li>Monday: Closed</li>
@@ -64,17 +66,19 @@
                     <li>Sunday: 9:00-13:00</li>
                 </div>
             </div>
-            <div class="visit-part">
-                <iframe class="visit-subpart"
+            <div class="map-section">
+                <h2>Our address</h2>
+                <div class="map-address-wrapper">
+                <iframe class="visit-map"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
                     width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
-                <div class="visit-subpart">
-                    <h2>Address</h2>
+                <div class="visit-address">
                     <p>Community Science Center</p>
                     <p>Landleven 20</p>
                     <p>9747 AJ Groningen</p>
                     <p>Netherlands</p>
                 </div>
+            </div>
             </div>
             <div class="visit-part">
                 <img src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg" alt="" />
