made visit us page responsive

--- a/visit.html
+++ b/visit.html
@@ -54,8 +54,8 @@
             <img src="../images/scott-webb-102825.jpg" alt="" />
         </div>
         <section class="visit-section">
-            <div class="visit-part">
-                <div class="visit-subpart">
+            <div class="opening-admission">
+                <div class="opening-hrs">
                     <h2>Opening hours</h2>
                     <li>Monday: Closed</li>
                     <li>Tuesday: 10:00-16:00</li>
@@ -65,44 +65,7 @@
                     <li>Saturday: 9:00-16:00</li>
                     <li>Sunday: 9:00-13:00</li>
                 </div>
-            </div>
-            <div class="map-section">
-                <h2>Our address</h2>
-                <div class="map-address-wrapper">
-                <iframe class="visit-map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
-                    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
-                <div class="visit-address">
-                    <p>Community Science Center</p>
-                    <p>Landleven 20</p>
-                    <p>9747 AJ Groningen</p>
-                    <p>Netherlands</p>
-                </div>
-            </div>
-            </div>
-            <div class="visit-part">
-                <img src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg" alt="" />
-                <div class="visit-subpart">
-                    <h2>Food & drinks</h2>
-                    <p>
-                        There is a café attached to the museum where you can get light
-                        lunches, soft drinks, coffee, snacks and more.
-                    </p>
-                </div>
-            </div>
-            <div class="visit-part">
-                <img src="../images/library-1132573_1920.jpg" alt="" />
-                <div class="visit-subpart">
-                    <h2>Shop</h2>
-                    <p>
-                        Our shop offers a range of memorabilia from the museum as well as
-                        great gifts and activity packs that allow you to continue to
-                        explore science even after you’ve left the museum.
-                    </p>
-                </div>
-            </div>
-            <div class="visit-part">
-                <div class="visit-subpart">
+                <div class="admission">
                     <h2>Admission</h2>
                     <p>The entrance is free for all.</p>
                     <p>
@@ -115,12 +78,53 @@
                         more people, please contact us on to arrange the tour
                     </p>
                 </div>
-                <div class="visit-subpart">
+            </div>
+
+            <div class="map-section">
+                <div class="map-address-wrapper">
+                    <iframe class="visit-map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
+                        width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
+                    <div class="visit-address">
+                        <h2>Our address</h2>
+                        <p>Community Science Center</p>
+                        <p>Landleven 20</p>
+                        <p>9747 AJ Groningen</p>
+                        <p>Netherlands</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cafe-and-shop-wrapper">
+                <div class="cafe">
+                    <div class="cafe-txt">
+                        <h2>Food & drinks</h2>
+                        <p>
+                            There is a café attached to the museum where you can get light
+                            lunches, soft drinks, coffee, snacks and more.
+                        </p>
+                    </div>
+                    <img src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg" alt="" />
+                </div>
+                <div class="shop">
+                    <div class="shop-txt">
+                        <h2>Shop</h2>
+                        <p>
+                            Our shop offers a range of memorabilia from the museum as well as
+                            great gifts and activity packs that allow you to continue to
+                            explore science even after you’ve left the museum.
+                        </p>
+                    </div>
+                    <img src="../images/library-1132573_1920.jpg" alt="" />
+                </div>
+                <div class="accessibility">
+                    <div class="accessibility-txt">
                     <h2>Accessibility</h2>
                     <p>
                         The museum has wheelchair accessibility ramps. It also has audio
                         guides and braille display signs for the visually impaired
                     </p>
+                </div>
+                <img src="../images/wheelchair.jpg" alt="" />
                 </div>
             </div>
         </section>
