corrected titles int he footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="image1">
           <img src="../images/exhibition-1863344_1920.jpg" alt="modern art exhibition, museum exhibition" />
           <div class="box">
-            <p>Welcome to the Community Science Center</p>
+            <p>Welcome to the Community Science Museum</p>
           </div>
         </div>
 
@@ -253,9 +253,9 @@
       <div class="contact">
         <h2>Contact</h2>
         <address>
-          <p>Community Science Center</p>
+          <p>Community Science Museum</p>
           <p>Landleven 20</p>
-          <p>9743 DA Groningen</p>
+          <p>9747 AJ Groningen</p>
           <p>Netherlands</p>
         </address>
         <p>Tlf: 98 76 90 123</p>
@@ -289,7 +289,7 @@
         <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
-    <p class="copyright-txt">&copy; 2022 Community Science Center</p>
+    <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
   </footer>
 </body>
 
