--- a/visit.html
+++ b/visit.html
@@ -87,7 +87,7 @@
                         width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
                     <div class="visit-address">
                         <h2>Our address</h2>
-                        <p>Community Science Center</p>
+                        <p>Community Science Museum</p>
                         <p>Landleven 20</p>
                         <p>9747 AJ Groningen</p>
                         <p>Netherlands</p>
@@ -111,7 +111,7 @@
                         <p>
                             Our shop offers a range of memorabilia from the museum as well as
                             great gifts and activity packs that allow you to continue to
-                            explore science even after you’ve left the museum.
+                            explore science even after you`ve left the museum.
                         </p>
                     </div>
                     <img src="../images/library-1132573_1920.jpg" alt="" />
@@ -134,9 +134,9 @@
             <div class="contact">
                 <h2>Contact</h2>
                 <address>
-                    <p>Community Science Center</p>
+                    <p>Community Science Museum</p>
                     <p>Landleven 20</p>
-                    <p>9743 DA Groningen</p>
+                    <p>9747 AJ Groningen</p>
                     <p>Netherlands</p>
                 </address>
                 <p>Tlf: 98 76 90 123</p>
@@ -170,7 +170,7 @@
                 <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
-        <p class="copyright-txt">&copy; 2022 Community Science Center</p>
+        <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
     </footer>
 </body>
 
