--- a/exhibitions.html
+++ b/exhibitions.html
@@ -56,30 +56,39 @@
                 <img src="../images/celso-405219.jpg" alt="">
                 <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night
                     sky and what we can see and know about the universe around us. </p>
-           <p class="explore">Explore</p>
-                </div>
+                <p class="explore">Explore</p>
+            </div>
             <div class="exhibition-type">
                 <h2>Evolution</h2>
                 <img src="../images/mammoth-1257288_1920.jpg" alt="">
-                <p>Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too. </p>
+                <p>Discover the origins of life on this planet and how the species we know today have evolved our time.
+                    You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly
+                    Mammoth, the Dodos, and a number of dinosaurs too. </p>
                 <p class="explore">Explore</p>
             </div>
             <div class="exhibition-type">
                 <h2>Biology & Medicine</h2>
                 <img src="../images/skeleton-414543_1920.jpg" alt="">
-                <p>For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.</p>
+                <p>For many people their life expectancy is much longer and their quality of life much improved, thanks
+                    to the growth of our understanding of medicine. Over a series of exhibits we explore the history of
+                    medicine and take a look at some major breakthroughs including the discovery of penicillin and the
+                    first heart transplant.</p>
                 <p class="explore">Explore</p>
             </div>
             <div class="exhibition-type">
                 <h2>Robotics & AI</h2>
                 <img src="../images/andy-kelly-0E_vhMVqL9g-unsplash.jpg" alt="">
-                <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
+                <p>The information revolution is here and robotics and artificial intelligence are the science of the
+                    future. From useful home applications of AI to industrial uses of robotics, the future is here. You
+                    can even say hello and shake the hand of Rob the Robot.</p>
                 <p class="explore">Explore</p>
             </div>
             <div class="exhibition-type">
                 <h2>Ecology</h2>
                 <img src="../images/pf-s112-pa-173e01.jpg" alt="">
-                <p>In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.</p>
+                <p>In our ecology section of the museum, we unpack the dangers we currently face including global
+                    warming, extinction of species, and pollution. But we also focus on the positive ways we can all
+                    contribute to a brighter future.</p>
                 <p class="explore">Explore</p>
             </div>
         </section>
@@ -89,9 +98,9 @@
             <div class="contact">
                 <h2>Contact</h2>
                 <address>
-                    <p>Community Science Center</p>
+                    <p>Community Science Museum</p>
                     <p>Landleven 20</p>
-                    <p>9743 DA Groningen</p>
+                    <p>9747 AJ Groningen</p>
                     <p>Netherlands</p>
                 </address>
                 <p>Tlf: 98 76 90 123</p>
@@ -125,7 +134,7 @@
                 <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
-        <p class="copyright-txt">&copy; 2022 Community Science Center</p>
+        <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
     </footer>
 </body>
 
