changed added background image to h1

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -48,8 +48,11 @@
         <input type="text" class="search-text" placeholder="Search...">
         <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
-    <main class="exhibitions-background">
+    <div class="exhibitions">
         <h1>Exhibitions</h1>
+        <img src="../images/exhibition-1863344_1920.jpg" alt="" />
+    </div>
+    <main class="exhibitions-background">
         <section class="exhibitions-container">
             <div class="exhibition-type">
                 <h2>Cosmology</h2>
