--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <section class="about-section">
       <h1>Our purpose</h1>
-      <div class="blue-background">
+      <div class="about-background">
         <div class="about-wrapper">
           <div class="about-text">
             <p>
@@ -97,9 +97,7 @@
               committed to making science accessible to all.
             </p>
           </div>
-          <div class="vr-boy">
             <img src="../images/samuel-zeller-158996.jpg" alt="Boy wearing VR googles" />
-          </div>
         </div>
       </div>
     </section>
