--- a/getinvolved.html
+++ b/getinvolved.html
@@ -50,28 +50,31 @@
     </div>
     <div class="getinvolved">
         <h1>Get involved</h1>
-        <img src="../images/william-bout-264826.jpg" alt="" />
     </div>
     <main class="background-getinvolved">
         <section class="getinvolved-section">
             <h2>Volunteer</h2>
             <div class="volunteer">
                 <div class="volunteer-txt">
-                <p>
-                    A number of people volunteer their time and effort to keep the displays in good order and ready for
-                    visitors to come and enjoy.
-                </p>
-                <p>
-                    Volunteering has its perks including getting to see behind the scenes of a working museum, access to
-                    staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss
-                    ideas for future exhibits and strategies for the museum.
-                </p>
-                <p>
-                    You can help volunteer in a number of different spheres. Please contact us if you’d like to find out
-                    more about how you can get involved.
-                </p>
-            </div>
-            <img src="images/roberto-nickson-396152.jpg" alt="">
+                    <p>
+                        A number of people volunteer their time and effort to keep the displays in good order and ready
+                        for
+                        visitors to come and enjoy.
+                    </p>
+                    <p>
+                        Volunteering has its perks including getting to see behind the scenes of a working museum,
+                        access to
+                        staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss
+                        ideas for future exhibits and strategies for the museum.
+                    </p>
+                    <p>
+                        You can help volunteer in a number of different spheres. Please contact us if you’d like to find
+                        out
+                        more about how you can get involved.
+                    </p>
+                </div>
+                <div class="volunteer-img">
+                </div>
             </div>
             <h2>Internships</h2>
             <div class="internships">
@@ -80,12 +83,11 @@
                         Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the
                         wonders of nature with people? Well you could be just the right person to enjoy an internship at
                         the museum.
-
                     </p>
                 </div>
-                <img src="images/people-219985_1280.jpg" alt="">
+                <div class="internships-img">
+                </div>
             </div>
-
         </section>
     </main>
     <footer>
