--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
               committed to making science accessible to all.
             </p>
           </div>
-            <img src="../images/samuel-zeller-158996.jpg" alt="Boy wearing VR googles" />
+           <div class="about-img">
+           </div>
         </div>
       </div>
     </section>
